--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    /* background-image: url(bcg.png);
-    background-size: cover; */
+    background-image: url(bcg.png);
+    background-size: cover;
 }
 
 .main_container {
